# BaseEncodeKit

./: CMakeLists.txt  README.md  vcpkg.json
examples/: CMakeLists.txt  base16.c  base32.c  base64-encoder.c  base64.c
include/: base16.h  base32.h  base64.h
src/: CMakeLists.txt  base16.c  base32.c  base64.c
tests/: CMakeLists.txt  base16.c  base32.c  base64.c  runner.c
